# arglet

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: helper.cmake
examples/: fizzbuzz.cpp  ls.cpp
include/arglet/: arg_view.hpp  arglet.hpp  flags.hpp  token.hpp  util.hpp
include/arglet/util/: array_map.hpp
legacy/examples/: fizzbuzz.cpp
legacy/include/arglet/: arglet.hpp
legacy/test/: test-command_set-1.cpp  test-flag_group-1.cpp  test-template-deduction-1.cpp
test/: hello-arglet.cpp  hello-command.cpp  hello-flagset.cpp  hello-ls.cpp  test-command_set-1.cpp  test-flag_group-1.cpp  test-flag_group-2.cpp  test-group-1.cpp  test-group-2.cpp  test_arglet.cpp
